--- a/FinishLine.GUI/FinishLine.GUI.csproj
+++ b/FinishLine.GUI/FinishLine.GUI.csproj
@@ -46,17 +46,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainWindow.Designer.cs">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewRaceWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewRaceWindow.Designer.cs">
+      <DependentUpon>NewRaceWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewRunnerWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewRunnerWindow.Designer.cs">
+      <DependentUpon>NewRunnerWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subro.Controls.cs">
       <SubType>Component</SubType>
     </Compile>
+    <EmbeddedResource Include="MainWindow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewRaceWindow.resx">
+      <DependentUpon>NewRaceWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewRunnerWindow.resx">
+      <DependentUpon>NewRunnerWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
