refactor file class

--- a/FinishLine.Core/FinishLine.Core.csproj
+++ b/FinishLine.Core/FinishLine.Core.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Country.cs" />
+    <Compile Include="FileRW.cs" />
     <Compile Include="Logika.cs" />
     <Compile Include="Race.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
