--- a/FinishLine.GUI/FinishLine.GUI.csproj
+++ b/FinishLine.GUI/FinishLine.GUI.csproj
@@ -72,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunnersListWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RunnersListWindow.Designer.cs">
+      <DependentUpon>RunnersListWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Subro.Controls.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -97,6 +103,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RunnersListWindow.resx">
+      <DependentUpon>RunnersListWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
