--- a/FinishLine.Core/FinishLine.Core.csproj
+++ b/FinishLine.Core/FinishLine.Core.csproj
@@ -47,8 +47,9 @@
     <Compile Include="Country.cs" />
     <Compile Include="FileRW.cs" />
     <Compile Include="RaceLogic.cs" />
-    <Compile Include="Race.cs" />
+    <Compile Include="RaceProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LapTime.cs" />
     <Compile Include="Runner.cs" />
   </ItemGroup>
   <ItemGroup>
